# bridge-back

./: .gitignore  Dockerfile  README.md  build.sbt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
bridge_back/: main.py
bridge_back/backend/: __init__.py  lobby.py  session.py  types.py
bridge_back/routers/: healthcheck.py  lobby.py
bridge_back/routers/session/: __init__.py  game.py  lobby.py
project/: plugins.sbt
src/main/resources/: logback.xml
src/main/scala/: Main.scala
src/main/scala/agh/bridge/: research.worksheet.sc
src/main/scala/agh/bridge/back/: AuthHandler.scala  Backend.scala  CorsHandler.scala  GameStateModels.scala  HttpServer.scala  Main.scala  Session.scala  User.scala
src/main/scala/agh/bridge/core/: Actions.scala  BidLevel.scala  BidSuit.scala  Bridge.scala  BridgePy.scala  Card.scala  Game.scala  Observation.scala  PlayerDirection.scala  Rank.scala  Suit.scala
src/main/scala/agh/bridge/firebase/: FirebaseAuth.scala
src/test/scala/: BackendSuite.scala
src/test/scala/agh/bridge/back/: BackendSuite.scala  UserSuite.scala
src/test/scala/agh/bridge/core/: GameSuite.scala
