[tool.poetry]
name = "bridge-back"
version = "0.1.0"
description = ""
authors = ["Carbon225 <carbon225@protonmail.com>"]
readme = "README.md"
packages = [{include = "bridge_back"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
