[tool.poetry]
name = "bridge-back"
version = "0.1.0"
description = ""
authors = ["Carbon225 <carbon225@protonmail.com>"]
readme = "README.md"
packages = [{include = "bridge_back"}]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = {extras = ["all"], version = "^0.92.0"}
bridge-core-py = { git = "https://github.com/bridge-agh/bridge-core-py.git", branch = "main" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
